--- a/package.json
+++ b/package.json
@@ -97,8 +97,7 @@
     "react-dnd": "2.1.4",
     "react-dnd-html5-backend": "2.1.2",
     "react-dnd-scrollzone": "3.1.0",
-    "react-virtualized": "9.18.5",
-    "scroll-into-view": "^1.8.0"
+    "react-virtualized": "9.18.5"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
